--- a/details-lilly.html
+++ b/details-lilly.html
@@ -101,7 +101,7 @@
     <!-- You can delete the links only if you purchased the pro version. -->
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    Designed by <a href="https://bootstrapmade.com/">Manda</a>
+    Designed by <a href="https://instagram.com/nda.mndaa">Manda</a>
   </div>
 
   <!-- Vendor JS Files -->
