--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://twitter.com/NMIXX_official" class="twitter"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.facebook.com/NMIXXOfficial/" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/nmixx_official/?hl=en" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.youtube.com/channel/UCnUAyD4t2LkvW68YrDh7fDg?reload=9" class="youtube"><i class="bi bi-youtube"></i></a>
       </div>
 
     </div>
